[gd_scene load_steps=6 format=3 uid="uid://k3v4y840ei8j"]

[ext_resource type="Texture2D" uid="uid://dhx2lbnvoijuf" path="res://assets/ui/cozy gui/Cozy GUI/Tileset/Cozy GUI - Tileset (By Pizza Doggy).png" id="1_1xi88"]
[ext_resource type="Script" uid="uid://d1vrlq0ouclyl" path="res://scripts/ingredients_ui_v_2.gd" id="1_gp5r8"]
[ext_resource type="FontFile" uid="uid://8y0v08b83lpv" path="res://assets/font/PixelAE-Bold.ttf" id="2_7fb3h"]
[ext_resource type="Texture2D" uid="uid://o2sa4pg5aocp" path="res://assets/ui/foods/Free_pixel_food_16x16/Icons/eggs_white.png" id="3_hybds"]
[ext_resource type="FontFile" uid="uid://dae4ki7o8weh5" path="res://assets/font/PixelAE-Regular.ttf" id="4_gp5r8"]

[node name="IngredientsUIv2" type="Control"]
process_mode = 2
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_gp5r8")

[node name="Panel" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -277.5
offset_top = -222.5
offset_right = 277.5
offset_bottom = 222.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_1xi88")
region_rect = Rect2(145, 0, 46, 48)
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 12

[node name="TitleLabel" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -222.0
offset_top = 39.5
offset_right = 222.0
offset_bottom = 84.5
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_7fb3h")
theme_override_font_sizes/font_size = 30
text = "Memorize These Ingredients!"
uppercase = true

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -224.0
offset_top = -74.0
offset_right = 224.0
offset_bottom = 103.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 32

[node name="Ingredient1" type="VBoxContainer" parent="Panel/HBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="Panel/HBoxContainer/Ingredient1"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
texture = ExtResource("3_hybds")

[node name="Label" type="Label" parent="Panel/HBoxContainer/Ingredient1"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_gp5r8")
theme_override_font_sizes/font_size = 30
text = "EGGS"
horizontal_alignment = 1

[node name="Ingredient2" type="VBoxContainer" parent="Panel/HBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="Panel/HBoxContainer/Ingredient2"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
texture = ExtResource("3_hybds")

[node name="Label" type="Label" parent="Panel/HBoxContainer/Ingredient2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_gp5r8")
theme_override_font_sizes/font_size = 30
text = "EGGS"
horizontal_alignment = 1

[node name="Ingredient3" type="VBoxContainer" parent="Panel/HBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="Panel/HBoxContainer/Ingredient3"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
texture = ExtResource("3_hybds")

[node name="Label" type="Label" parent="Panel/HBoxContainer/Ingredient3"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_gp5r8")
theme_override_font_sizes/font_size = 30
text = "EGGS"
horizontal_alignment = 1

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
